--- a/company/index.html
+++ b/company/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1><a class="title" href="http://i9o.io">i9o</a></h1>
+        <h1><a class="title" href="https://i9o.io">i9o</a></h1>
         <p class="subtitle">Company information</p>
     </header>
     <div>
