--- a/team/index.html
+++ b/team/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <h1><a class="title" href="/">i9o</a></h1>
+        <h1><a class="title" href="https://i9o.io">i9o</a></h1>
         <p class="subtitle">Introducing our team</p>
         <h4>Co-Founder・CEO</h4>
         <h3>iori kojima</h3>
