--- a/team/index.html
+++ b/team/index.html
@@ -7,6 +7,17 @@
     <link rel="icon" type="image/png" href="../imgs/i9o-black.png"  />
     <link rel="stylesheet" href="style.css">
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T06CY59PGH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T06CY59PGH');
+</script>
+
 <body>
     <div>
         <h1><a class="title" href="https://i9o.io">i9o</a></h1>
