--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1><a class="title" href="https://i9o.io">i9o</a></h1>
         <p class="subtitle">We are memory company</p>
         <nav>
-            <a href="https://i9o.io/about/">About</a>
+            <a href="https://i9o.io/story/">Story</a>
             <a href="https://i9o.io/team/">Team</a>
             <a href="https://i9o.io/company/">Company</a>
         </nav>
