--- a/story/index.html
+++ b/story/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../imgs/i9o-black.png"  />
-    <title>About i9o inc</title>
+    <title>Story</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -21,7 +21,7 @@
 <body>
     <header>
         <h1><a class="title" href="https://i9o.io">i9o</a></h1>
-        <p class="subtitle">About us</p>
+        <p class="subtitle">Our story</p>
     </header>
 
     <p>
