--- a/company/index.html
+++ b/company/index.html
@@ -33,6 +33,11 @@
         <p>i9o inc.</p>
         <br>
         <br>
+        <h3>Purpose</h3>
+        <p>人類の創造力を加速させ拡張する</p>
+        <p>Accelerate and expand human creativity</p>
+        <br>
+        <br>
         <h3>資本金 / Capital stock</h3>
         <p>1,700,000円</p>
         <p>￥1,700,000</p>
