--- a/company/index.html
+++ b/company/index.html
@@ -33,7 +33,7 @@
         <p>i9o inc.</p>
         <br>
         <br>
-        <h3>Purpose</h3>
+        <h3>パーパス / Purpose</h3>
         <p>人類の創造力を加速させ拡張する</p>
         <p>Accelerate and expand human creativity</p>
         <br>
