--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="imgs/i9o-black.png"  />
-    <title>i9o inc - We are memory company</title>
+    <title>i9o</title>
+    <subtitle>We are memory company.</subtitle>
     <link rel="stylesheet" href="style.css">
 </head>
 
