--- a/team/index.html
+++ b/team/index.html
@@ -26,7 +26,7 @@
         <h3>iori kojima</h3>
         <h4>Co-Founder・Lead Engineer</h4>
         <h3>yusuke matsubayashi</h3>
-        <h4>Treasury Associate</h4>
+        <h4>Treasury Assistant</h4>
         <h3>daisuke ochiai</h3>
         <h4>Creative Assistant</h4>
         <h3>shuhey koyama</h3>
