--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="私たちは記憶の会社です。">
     <link rel="icon" type="image/png" href="imgs/i9o-black.png"  />
     <title>i9o</title>
     <link rel="stylesheet" href="style.css">
