--- a/company/index.html
+++ b/company/index.html
@@ -38,8 +38,9 @@
         <br>
         <br>
         <h3>資本金 / Capital stock</h3>
-        <p>950,000円</p>
-        <p>￥950,000</p>
+        <p>*資本準備金も含む / *Including capital reserve</p>
+        <p>1,700,000円</p>
+        <p>￥1,700,000</p>
         <br>
         <br>
         <h3>事業内容 / Bisiness activities</h3>
