--- a/company/index.html
+++ b/company/index.html
@@ -34,7 +34,7 @@
         <br>
         <h3>商号 / Business name </h3>
         <p>アイナインオー株式会社</p>
-        <p>i9o inc.</p>
+        <p>I NINE O K.K.</p>
         <br>
         <br>
         <h3>資本金 / Capital stock</h3>
