--- a/team/index.html
+++ b/team/index.html
@@ -26,6 +26,9 @@
         <h3>iori kojima</h3>
         <h4>Co-Founder・Lead Engineer</h4>
         <h3>yusuke matsubayashi</h3>
+        <h4>Special Thanks</h4>
+        <h4>Daisuke Ochiai</h4>
+        <h4>Shuhey Koyama</h4>
         <h4>ヾ(๑╹◡╹)ﾉ"</h4>
         <h3><a class="iori2" href="https://twitter.com/IoriKojima09">join us</a></h3>
     </div>
