--- a/company/index.html
+++ b/company/index.html
@@ -34,6 +34,11 @@
         <p>I NINE O K.K.</p>
         <br>
         <br>
+        <h3>設立日 / Data of incorporation </h3>
+        <p>2023年3月28日</p>
+        <p>2023/03/28</p>
+        <br>
+        <br>
         <h3>資本金 / Capital stock</h3>
         <p>*資本準備金も含む / *Including capital reserve</p>
         <p>1,700,000円</p>
@@ -41,8 +46,8 @@
         <br>
         <br>
         <h3>事業内容 / Bisiness activities</h3>
-        <p>非公表</p>
-        <p>private</p>
+        <p>記憶の欠損を補填し加速させ拡張するソフトウェアおよびハードウェアの開発・提供。</p>
+        <p>Development and provision of software and hardware that compensate for, accelerate, and extend memory deficits.</p>
         <br>
         <br>
         <h3>本店所在地 / Head office location</h3>
