--- a/company/index.html
+++ b/company/index.html
@@ -46,7 +46,7 @@
         <br>
         <br>
         <h3>事業内容 / Bisiness activities</h3>
-        <p>記憶の欠損を補填し加速させ拡張するソフトウェアおよびハードウェアの開発・提供。</p>
+        <p>記憶サイクルを加速させ拡張する\nソフトウェアおよびハードウェアの開発・提供.</p>
         <p>Development and provision of software and hardware that compensate for, accelerate, and extend memory deficits.</p>
         <br>
         <br>
