--- a/company/index.html
+++ b/company/index.html
@@ -47,7 +47,7 @@
         <br>
         <h3>事業内容 / Bisiness activities</h3>
         <p>記憶サイクルを加速させ拡張する<br>ソフトウェアおよびハードウェアの開発・提供.</p>
-        <p>Development and provision of software and hardware that<br>accelerates and expands memory cycles.</p>
+        <p>Development and provision of software and hardware <br>that accelerates and expands memory cycles.</p>
         <br>
         <br>
         <h3>本店所在地 / Head office location</h3>
