--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="私たちは記憶の会社です。">
+    <meta name="description" content="i9oは記憶の会社です。私たちは人類の発展を支えてきた記憶と記録、そのサイクルの欠損を補填し加速させ拡大することで、人類の創造力を加速し拡張させます。">
     <link rel="icon" type="image/png" href="imgs/i9o-black.png"  />
     <title>i9o</title>
     <link rel="stylesheet" href="style.css">
+    <meta property="og:url" content="https://i9o.io/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="i9o inc / I NINE O K.K. We are memory company.">
+    <meta property="og:description" content="i9oは記憶の会社です。私たちは人類の発展を支えてきた記憶と記録、そのサイクルの欠損を補填し加速させ拡大することで、人類の創造力を加速し拡張させます。">
+    <meta property="og:site_name" content="Home | i9o inc / I NINE O K.K.">
+    <meta property="og:image" content="xxx">
 </head>
 
 <!-- Google tag (gtag.js) -->
