--- a/company/index.html
+++ b/company/index.html
@@ -24,9 +24,13 @@
         <p class="subtitle">Company information</p>
     </header>
     <div>
+        <p>*23年7月2日時点の情報を掲載しています</p>
+        <p>*Information as of July 2, 2023 is posted</p>
+        <br>
+        <br>
         <h3>パーパス / Purpose</h3>
-        <p>人類の創造力を加速させ拡張する</p>
-        <p>Accelerate and expand human creativity</p>
+        <p>あなたとともに人類の創造力を加速させ拡張する</p>
+        <p>Accelerate and expand human creativity with you</p>
         <br>
         <br>
         <h3>商号 / Business name </h3>
