--- a/company/index.html
+++ b/company/index.html
@@ -29,7 +29,7 @@
         <br>
         <br>
         <h3>パーパス / Purpose</h3>
-        <p>あなたとともに人類の創造力を加速させ拡張する</p>
+        <p>人類の創造力を加速させ拡張する</p>
         <p>Accelerate and expand human creativity with you</p>
         <br>
         <br>
