--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="https://i9o.io/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="i9o inc / I NINE O K.K. We are memory company.">
-    <meta property="og:description" content="i9oは記憶の会社です。私たちは人類の発展を支えてきた記憶と記録、そのサイクルの欠損を補填し加速させ拡大することで、人類の創造力を加速し拡張させます。">
+    <meta property="og:description" content="i9oは記憶の会社です。私たちは人類の発展を支えてきた記憶と記録、そのサイクルの欠損を補填し加速させ拡大することで、人類の創造力を加速し拡張させます。代表取締役社長 小島伊織 。Co-Founder and CEO iori kojima .">
     <meta property="og:site_name" content="Home | i9o inc / I NINE O K.K.">
     <meta property="og:image" content="https://raw.githubusercontent.com/i9o-io/hp/master/imgs/i9o-ogImage.png">
     <meta name="twitter:card" content="summary_large_image" />
