--- a/team/index.html
+++ b/team/index.html
@@ -26,6 +26,8 @@
         <h3>iori kojima</h3>
         <h4>Co-Founder・Lead Engineer</h4>
         <h3>yusuke matsubayashi</h3>
+        <h4>COO</h4>
+        <h3>yuki koyama</h3>
         <h4>Special Thanks</h4>
         <h3>shuhey koyama</h3>
         <h4> ヾ(๑╹◡╹)ﾉ"</h4>
