--- a/team/index.html
+++ b/team/index.html
@@ -29,6 +29,7 @@
         <h4>COO</h4>
         <h3>yuki koyama</h3>
         <h4>Special Thanks</h4>
+        <h3>daisuke ochiai</h3>
         <h3>shuhey koyama</h3>
         <h4> ヾ(๑╹◡╹)ﾉ"</h4>
         <h3><a class="iori2" href="https://twitter.com/IoriKojima09">join us</a></h3>
