--- a/index.html
+++ b/index.html
@@ -55,11 +55,8 @@
             <h2>Company and page information</h2>
                 <p>
                     Purpose:　Accelerate and expand human creativity with you.
-                    <br>
                     <br>Company name:　I NINE O K.K. (About: i9o inc) (Jp: アイナインオー株式会社)
-                    <br>
                     <br>Data of incorporation:　2023/03/28
-                    <br>
                     <br>Capital stock:　￥1,700,000 *Including capital reserve
                     <br>
                     <br>Bisiness activities:
@@ -82,15 +79,16 @@
                     <br>
                     <h2>Contact</h2>
                     <p>
-                        Email:　info@i9o.io
-                        <br>ID of X.com (*Twitter):　 
-                            <a class="urlFont1" href="https://x.com/iorikojima09">@iorikojima09</a>
-                            (Account of CEO)
-                        <br><br><br>
-                        <p>---</p>
-                        <br><br>
+                        Email:
+                        　info@i9o.io
+                        <br>ID of X.com (*Twitter):　
+                        <a class="urlFont1" href="https://x.com/iorikojima09">@iorikojima09</a>
+                         (Account of CEO)
+                    <br><br><br>
+                    <p>---</p>
+                    <br><br>
                         Information on this site was updated on 15:08, October 19, 2023.
-                        <br><br>
+                    <br><br>
                     </p>  
                 </p>
             <br>
