--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             <br>yuki koyama:　COO
             <br>*private now (Assignment completed. Under adjustment.):　CTO
             <br>
-            <br>shuhey koyama:　*Special thanks member
+            <br>shuhey koyama:　Menber who directly under the CEO, helps organize his thoughts, brain and mental. (Special thanks member)
+            <br>
             <br>*unkown (Under adjustment.):　Engineer with specific skills one
             <br>*unkown (Under adjustment.):　Engineer with specific skills two
             <br>*uknown (Before selecting the right person):　Designer
