--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2>We are memory company.
             <br>Accelerate and expand human creativity with you. 
         </h2>
-        <h4>And to a NEWWORLD beyond that... (Let's loading now!!!)</h4>
+        <h4>And to a NEWWORLD beyond that... (Let's loading now)</h4>
         <h2>ヾ(๑╹◡╹)ﾉ" （╹◡╹）♡  ( ◠‿◠ )</h2>
         <br>
         <p>---</p>
