--- a/index.html
+++ b/index.html
@@ -33,67 +33,22 @@
         <h2>We are memory company.
             <br>Accelerate and expand human creativity with you. 
         </h2>
-        <h4>And to a NEWWORLD beyond that... (Let's loading now)</h4>
         <h2>ヾ(๑╹◡╹)ﾉ" （╹◡╹）♡  ( ◠‿◠ )</h2>
         <br>
-        <p>---</p>
-        <br>
-        <h2>Introducing our Team member</h2>
-        <p>iori kojima:　Co-founder and CEO
-            <br>yusuke matsubayashi:　Co-founder and Engineer
-            <br>yuki koyama:　COO
-            <br>*private now (Assignment completed. Under adjustment.):　CTO
-            <br>
-            <br>shuhey koyama:　Menber who directly under the CEO, helps organize his thoughts, brain and mental. (Special thanks member)
-            <br>
-            <br>*unkown (Under adjustment.):　Engineer with specific skills one
-            <br>*unkown (Under adjustment.):　Engineer with specific skills two
-            <br>*uknown (Before selecting the right person):　Designer
-            <br>*unkown (Under adjustment.):　Marcketer and PR
-        </p>
-        <br>
-        <p>---</p>
-        <br>
             <h2>Company and page information</h2>
-                <p>
-                    Purpose:　Accelerate and expand human creativity with you.
-                    <br>Company name:　I NINE O K.K. (About: i9o inc) (Jp: アイナインオー株式会社)
-                    <br>Data of incorporation:　2023/03/28
-                    <br>Capital stock:　￥1,700,000 *Including capital reserve
-                    <br>
-                    <br>Bisiness activities:
-                    <br>　Planning, design, development and provision of software and equipment, 
-                    <br>　that accelerate and expand humanity's ACT of memory and the cycle of 
-                    <br>　RECORDING・THINKING,・PASSING ON and PRACTICING.
-                    <br>
-                    <br>Location:
-                    <br>　Head office:
-                    <br>　　Suita city, Osaka, Japan
-                    <br>　Development center:　
-                    <br>　　Main）Metaverse space (Online)
-                    <br>　　Sub）Kyoto city, Kyoto, Japan (Offline)
-                    <br>
-                    <br>Co-founder:
-                    <br>　iori kojima
-                    <br>　yusuke matsubayashi
-                    <br><br><br>
-                    <p>---</p>
-                    <br>
-                    <h2>Contact</h2>
-                    <p>
-                        Email:
-                        　info@i9o.io
-                        <br>ID of X.com (*Twitter):　
-                        <a class="urlFont1" href="https://x.com/iorikojima09">@iorikojima09</a>
-                         (Account of CEO)
-                    <br><br><br>
-                    <p>---</p>
-                    <br><br>
-                        Information on this site was updated on 15:08, October 19, 2023.
-                    <br><br>
-                    </p>  
-                </p>
+            <p>
+                Company name:　I NINE O K.K. (About: i9o inc) (Jp: アイナインオー株式会社)
+                <br>Data of incorporation:　2023/03/28
+                <br>Capital stock:　￥1,700,000 *Including capital reserve
+                <br>Information on this site was updated on 15:08, October 19, 2023.
+            </p>
             <br>
+            <h2>Contact</h2>
+            <p>
+                Email: info@i9o.io
+            </p>
+            <br>
+            <p>---</p>
     </header>
     <p></p>  <!-- ここにメッセージを表示する -->
     <script src="style.js"></script>
