--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         <h2>We are memory company.
             <br>Accelerate and expand human creativity with you. 
         </h2>
-        <h2>ヾ(๑╹◡╹)ﾉ" （╹◡╹）♡  ( ◠‿◠ )</h2>
+        <h2>ヾ(๑╹◡╹)ﾉ"</h2>
         <br>
             <h2>Company and page information</h2>
             <p>
                 Company name:　I NINE O K.K. (About: i9o inc) (Jp: アイナインオー株式会社)
                 <br>Data of incorporation:　2023/03/28
                 <br>Capital stock:　￥1,700,000 *Including capital reserve
-                <br>Information on this site was updated on 15:08, October 19, 2023.
+                <br>Information on this site was updated on 2023.
             </p>
             <br>
             <h2>Contact</h2>
